--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -20,7 +20,7 @@ button.btn-success,
   .btn-success:focus:hover {
     background: #c92247; }
 
-div.card-header.bg-success {
+div.card-header.bg-test {
   background-color: #b31e3f; }
 
 button.btn.btn-outline-dark.answer-btn {
