--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -9,7 +9,7 @@ button.btn-success,
 .btn-success:active,
 .btn-success:visited,
 .btn-success:focus {
-  font-family: "Nanum Myeongjo", serif;
+  font-family: 'Nanum Myeongjo', serif;
   background-color: #b31e3f;
   border-color: #b31e3f;
   margin-right: 5px; }
@@ -21,18 +21,18 @@ button.btn-success,
     background: #c92247; }
 
 .navbar-brand, .nav-link {
-  font-family: "Nanum Myeongjo", serif; }
+  font-family: 'Nanum Myeongjo', serif; }
 
 div.card-header.bg-test {
   background-color: #b31e3f; }
 
 h3, h4 {
-  font-family: "Nanum Myeongjo", serif; }
+  font-family: 'Nanum Myeongjo', serif; }
 
 button.btn.btn-outline-dark.answer-btn {
   color: #b31e3f;
   border-color: #b31e3f;
-  font-family: "Nanum Myeongjo", serif;
+  font-family: 'Nanum Myeongjo', serif;
   margin: 10px; }
   button.btn.btn-outline-dark.answer-btn:hover {
     background: #c92247;
