--- a/client/src/scss/App.scss
+++ b/client/src/scss/App.scss
@@ -3,14 +3,15 @@
 @import "Mixins";
 
 // Navbar
-button.btn-success,
-  .btn-success:hover,
-  .btn-success:active,
-  .btn-success:visited,
-  .btn-success:focus {
+button.btn-test,
+  .btn-test:hover,
+  .btn-test:active,
+  .btn-test:visited,
+  .btn-stestfocus {
       @include allOtherFont;
       background-color: $rubyRed;
       border-color: $rubyRed;
+      color: white;
       margin-right: 5px;
       &:hover {
         background: lighten($rubyRed, 5);
