--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -27,7 +27,7 @@ button.btn-test,
 div.card-header.bg-test {
   background-color: #b31e3f; }
 
-h3, h4 {
+h3, h4, h6, p {
   font-family: 'Nanum Myeongjo', serif; }
 
 button.btn.btn-outline-dark.answer-btn {
