--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -31,6 +31,15 @@ div.card-header.default {
 h3, h4, h6, p, .form-label {
   font-family: 'Nanum Myeongjo', serif; }
 
+h4 {
+  font-weight: bold; }
+
+h6 {
+  font-size: 24px; }
+
+p {
+  font-size: 20px; }
+
 button.btn.btn-outline-dark.answer-btn {
   color: #b31e3f;
   border-color: #b31e3f;
