--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -5,7 +5,7 @@
   font-style: normal; }
 
 body {
-  background-image: url("/img/bg.png");
+  background-image: url("/img/bg.jpg");
   background-position: top;
   background-size: 100% auto; }
 
