--- a/client/src/scss/App.scss
+++ b/client/src/scss/App.scss
@@ -4,7 +4,7 @@
 
 // Background
 body {
-  background-image: url("/img/bg.png");
+  background-image: url("/img/bg.jpg");
   background-position: top;
   background-size: 100% auto;
 }
