change logos and fix margins on logos

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -76,3 +76,9 @@ div.card-header.winner {
 
 .google-button {
   margin-top: 25px; }
+
+.logo {
+  margin-top: 10px; }
+
+.mx-auto.d-block.logo {
+  margin-top: 10px; }
