--- a/client/src/scss/App.scss
+++ b/client/src/scss/App.scss
@@ -96,3 +96,11 @@ div.card-header.winner {
 .google-button {
   margin-top: 25px;
 }
+
+.logo {
+  margin-top: 10px;
+}
+
+.mx-auto.d-block.logo {
+  margin-top: 10px;
+} 
