--- a/client/src/scss/App.scss
+++ b/client/src/scss/App.scss
@@ -5,8 +5,11 @@
 // Background
 body {
   background-image: url("/img/bg.jpg");
-  background-position: top;
-  background-size: 100% auto;
+  min-height:100%;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -moz-background-size: cover;
 }
 
 // Navbar
@@ -89,8 +92,9 @@ div.card-header.winner {
   color: white;
 }
 
-.winner-logo {
+.mx-auto.d-block.winner-logo {
   margin-bottom: 15px;
+  margin-top: 10px;
 }
 
 .google-button {
