--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -74,15 +74,12 @@ div.card-header.winner {
   background-color: #009874;
   color: white; }
 
-.mx-auto.d-block.winner-logo {
+.mx-auto.d-block.winner-logo.img-fluid {
   margin-bottom: 15px;
   margin-top: 10px; }
 
-.google-button {
-  margin-top: 25px; }
-
-.logo {
+.logo.img-fluid {
   margin-top: 10px; }
 
-.mx-auto.d-block.logo {
+.mx-auto.d-block.logo.img-fluid {
   margin-top: 10px; }
