--- a/client/src/scss/App.scss
+++ b/client/src/scss/App.scss
@@ -103,3 +103,17 @@ div.card-header.winner {
 .mx-auto.d-block.logo.img-fluid {
   margin-top: 10px;
 } 
+
+.mx-auto.d-block.logo {
+  margin-top: 10px;
+} 
+
+.correct {
+  color: $emerald;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+.wrong {
+  color: $rubyRed;
+  text-shadow: 2px 2px 4px #000000;
+}
